--- a/style.css
+++ b/style.css
@@ -48,9 +48,8 @@ li a{
     float: right;
     text-decoration: none;
     color: black;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-weight: bold; 
+    font-weight: bold;
+    display: flex;
 }
 i{
     margin-right: 10px;
