--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ li a{
     color: black;
     font-weight: bold;
     display: flex;
+    justify-content: space-arround;
 }
 i{
     margin-right: 10px;
