--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ h3,h4,p{
 /*     margin-top: -500px;
     margin-right: 500px; */
     display: flex;
-    flex-direction: right;
-
 }
 .rupees{
     color: red;
@@ -48,7 +46,7 @@ img{
 #second-heading{
     border-bottom: 2px solid grey;
 }
-li a{
+#nav li a{
     float: right;
     text-decoration: none;
     color: black;
