--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h3,h4,p{
 /*     margin-top: -500px;
     margin-right: 500px; */
     display: flex;
+    flex-direction: column;
 }
 .rupees{
     color: red;
