--- a/style.css
+++ b/style.css
@@ -81,12 +81,12 @@ i{
     padding-bottom: 20px;
 }
 #para3{
-    margin-right: 56px;
-    margin-left: 153px;
+/*     margin-right: 56px;
+    margin-left: 153px; */
     border: 2px solid grey;
-/*     border-left: none;
+    border-left: none;
     border-right: none;
     padding-top: 20px;
-    padding-bottom: 20px; */
+    padding-bottom: 20px;
     justify-content: center;
 }
