--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ li a{
   color: black;
   display: block;
   padding: 8px;
-  background-color: #dddddd;
+  background-color: white;
   margin-left: 10px;
   text-decoration: none;
   
