--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 h3,h4,p{
     font-family: 'Source Sans Pro', sans-serif;
 }
-#main{
+main {
     display: flex;
     flex-direction: row;
 }
@@ -10,14 +10,9 @@ h3,h4,p{
 #book-logo{
     margin-left: 150px;
     width: 60%;
-    display: flex;
-    flex-direction: left;
 }
 #section2{
-    float: right;
     border-width: 60%;    
-    margin-top: -500px;
-    margin-right: 500px;
 
 }
 .rupees{
