--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main {
 #section2 {
     border-width: 60%;  
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
 }
 
@@ -25,12 +25,14 @@ main {
 nav{
     display: flex;
     flex-direction: row;
+    
 }
 
 ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
+  align-items: flex-end;
   
 }
 
