--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ h3,h4,p{
 main {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #book-logo{
-    width: 60%;
+    width: 50%;
 }
 
 #section2 {
@@ -24,7 +26,8 @@ main {
 
 nav{
     display: flex;
-    flex-direction: right;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
     
 }
 
@@ -32,7 +35,6 @@ ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
-  align-items: flex-end;
   
 }
 
