--- a/style.css
+++ b/style.css
@@ -2,10 +2,17 @@
 h3,h4,p{
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end
+}       
+        
 main {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
