--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ main {
     align-items: center;
 }
 
-#book-logo{
+.book-logo{
     width: 50%;
+    border: 30px 10px solid grey;
 }
 
 #section2 {
