--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
 main {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
