--- a/style.css
+++ b/style.css
@@ -57,10 +57,11 @@ button:hover{
 }
 
 img{
-    border-width: 30px;
-    padding-top: 30px;
-    border: 30px 10px solid grey;
+       
+    height: 376px;
+    margin-left: 77px;
 }
+
 
 #first-heading{
     border-bottom: 2px solid grey;   
