--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ img{
        
     height: 376px;
     margin-left: 77px;
+    border: 10px solid grey;
+    border-bottom: none;
+    border-top: none;
 }
 
 
