--- a/style.css
+++ b/style.css
@@ -122,3 +122,15 @@ i{
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+@media:(max-width:600){
+    nav{
+        display: none;
+    
+    }
+    
+    main{
+        flex-direction: column;
+    }
+    
+}
