--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
 }
 
 #section2 {
-    border-width: 60%;  
+    border-width: 50%;  
     display: flex;
     flex-direction: column;
 
@@ -58,7 +58,9 @@ img{
     border-bottom: none;
     border-top: none;
 }
-
+.book-logo{
+    width: 50%;
+}
 
 #first-heading{
     border-bottom: 2px solid grey;   
