--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ img{
     border-top: none;
 }
 .book-logo{
-    width: 50%;
+    width: 30%;
 }
 
 #first-heading{
@@ -142,7 +142,12 @@ i{
         height: 50px;
         width: 50px;
         display: flex;
+        flex-direction: flex-end;
     }
     
+    img{
+        display: flex;
+        flex-direction: center;
+    }
 }
   
