--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main {
     border-width: 50%;  
     display: flex;
     flex-direction: column;
+    padding: 10px;
 
 }
 
@@ -62,9 +63,6 @@ img{
     border: 10px solid grey;
     border-bottom: none;
     border-top: none;
-}
-.book-logo{
-    width: 54%;
 }
 
 #first-heading{
