--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ i{
     border-right: none;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 #para2{
@@ -124,6 +126,8 @@ i{
     border-right: none;
     padding-top: 20px;
     padding-bottom: 20px;
+     margin-left: 50px;
+    margin-right: 50px;
 }
 
 @media screen and (max-width: 600px){
