--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-}   
+}
+
+section{
+    width: 800px;
+}
 
 #hamburger{
     display: none;
