--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h3,h4,p{
     font-family: 'Source Sans Pro', sans-serif;
 }
 body{
-    background-color: grey;
+    background-color: #f7f7f7;
 }
 
 header {
