--- a/style.css
+++ b/style.css
@@ -157,8 +157,9 @@ i{
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
-   justify-content: left;
-    align-items: left;
+    flex-direction: column;
+    justify-content: left;
+    width: 700px;
 }
 
 #para3{
